# android-pack

./: README.md
AndroidPack1/: settings.gradle
AndroidPack1/app/: build.gradle
AndroidPack1/app/release/: output-metadata.json
AndroidPack1/app/src/androidTest/java/org/test/androidpack1/: ExampleInstrumentedTest.java
AndroidPack1/app/src/main/: AndroidManifest.xml
AndroidPack1/app/src/main/cpp/: CMakeLists.txt  jni_utils.cpp  jni_utils.h  log.h  native-lib.cpp  pack_utils.cpp  pack_utils.h
AndroidPack1/app/src/main/java/org/test/androidpack1/: MyApp.java
AndroidPack1/app/src/main/res/values/: strings.xml  themes.xml
AndroidPack1/app/src/main/res/values-night/: themes.xml
AndroidPack1/gradle/wrapper/: gradle-wrapper.properties
AndroidPack2/: build.gradle  settings.gradle
AndroidPack2/app/: build.gradle
AndroidPack2/app/src/main/: AndroidManifest.xml
AndroidPack2/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AndroidPack2/app/src/main/cpp/utils/: dlfcn_compat.cpp  dlfcn_compat.h  pack_utils.cpp  pack_utils.h
AndroidPack2/app/src/main/res/values/: strings.xml  themes.xml
AndroidPack2/app/src/main/res/values-night/: themes.xml
AndroidPack2/gradle/wrapper/: gradle-wrapper.properties
AndroidPack3/: settings.gradle
AndroidPack3/app/: build.gradle
AndroidPack3/app/src/main/: AndroidManifest.xml
AndroidPack3/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AndroidPack3/app/src/main/cpp/utils/: DexFile.h  aosp_header.h  jni_utils.h  log.h  pack03_core.cpp  pack03_core.h  pack_utils.cpp
AndroidPack3/app/src/main/res/layout/: activity_main.xml
AndroidPack3/app/src/main/res/values/: strings.xml  themes.xml
AndroidPack3/app/src/main/res/values-night/: themes.xml
AndroidPack3/gradle/wrapper/: gradle-wrapper.properties
DexVmp/: settings.gradle
DexVmp/app/: build.gradle
DexVmp/app/src/main/: AndroidManifest.xml
DexVmp/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
DexVmp/app/src/main/cpp/utils/: jni_utils.cpp  jni_utils.h  log.h  vm_core.cpp  vm_core.h  vm_utils.cpp  vm_utils.h
DexVmp/app/src/main/res/layout/: activity_main.xml
DexVmp/app/src/main/res/values/: strings.xml  themes.xml
DexVmp/app/src/main/res/values-night/: themes.xml
DexVmp/gradle/wrapper/: gradle-wrapper.properties
(+11 files in other folders)
